# cs244c-submission

./: .gitignore  README.md  body.tex  paper.tex  reference.bib  requirements.txt
alphacc/: archive.py  config.py  dna_pb2.py  evolve_remy.py  llm_client.py  remy_eval.py  translate_to_cpp.py  whisker_loader.py
paper/: README.md  body.tex  paper.tex  reference.bib
remy/: .gitignore  README.md  build_evolved.sh  build_sender_runner.sh  configure.ac  pyproject.toml
remy/configs/: link-10x.cfg  link-1x.cfg  link-20x.cfg
remy/scripts/: calibrate.py  eval_dense_cpp.py  eval_evolved.sh  plot.py  plot_calibration.py  plot_cpp_comparison.py  plot_replication.py  remy_tool_runner.py
remy/slurm/: mlp_0.sh  mlp_1.sh  mlp_10.sh  mlp_11.sh  mlp_12.sh  mlp_13.sh  mlp_14.sh  mlp_15.sh  mlp_16.sh  mlp_17.sh  mlp_18.sh  mlp_19.sh  mlp_2.sh  mlp_20.sh  mlp_21.sh  mlp_22.sh  mlp_23.sh  mlp_24.sh  mlp_25.sh  mlp_26.sh  mlp_27.sh  mlp_28.sh  mlp_29.sh  mlp_3.sh  mlp_30.sh  mlp_31.sh  mlp_32.sh  mlp_33.sh  mlp_34.sh  mlp_35.sh  mlp_36.sh  mlp_37.sh  mlp_38.sh  mlp_39.sh  mlp_4.sh  mlp_40.sh  mlp_41.sh  mlp_42.sh  mlp_43.sh  mlp_5.sh  (+22 more)
remy/src/: Makefile.am  alphacc-evaluator.cc  alphaccrat.cc  alphaccrat.hh  evaluator.cc  evaluator.hh  evolved-evaluator.cc  evolved-runner  evolved-runner.cc  evolvedpolicy.hh  evolvedrat.cc  evolvedrat.hh  memory.cc  memory.hh  neural-evaluator.cc  neuralrat.cc  neuralrat.hh  random.cc  random.hh  rat-templates.cc  rat.cc  rat.hh  ratbrain.cc  ratbrain.hh  rattrainer.cc  remy.cc  sender-runner-whisker.cc  sender-runner.cc  sendergang.hh
remy/tests/: Makefile.am  libtorch-test.cc
results/: README.md
results/alphacc-evals/: 10x_archive.json  10x_generalization.json  10x_history.json  multipoint_history.json  stateless_best_policy.py  v2_generalization.json  v3_best_policy.py  v3_generalization.json  v4_history.json  v5_generalization.json  v6_best_policy.py  v6_history.json
results/calibration/: all_trees_on1000.txt  python_vs_cpp.csv
results/cpp_sim/: README.md
results/cpp_sim/dense_cpp/: alphacc_evolved.csv  remy-10x.csv  (+13 more)
results/diverse_seeds/: diverse_seed_results.json
results/ppo-evals/: brain-248.csv  brain-383.csv  brain-751.csv  brain-793.csv  brain-798.csv  brain-837.csv
results/remy-evals/: remy-10x.csv  remy-1x.csv  remy-20x.csv
scripts/: _paths.py  eval_dense.py  generate_figures.sh  multiseed_eval.py  plot_alphacc_standalone.py  plot_calibration.py  plot_cpp_eval.py  plot_diverse_seeds.py  plot_evolution_trajectory.py  plot_main_comparison.py  plot_multipoint.py  plot_paper_v2.py  plot_python_eval.py  plot_replication.py  rtt_sweep.py  run_alphacc_eval.sh  run_alphacc_evolve.sh  run_ppo_eval.sh  run_remy_eval.sh
(+84 files in other folders)
